# 100rustprojects

./:  progress.md  .gitignore  README.md  glossary.md
notes/: admin_dashboard_ui.md  asset_manager.md  async_web_fetcher.md  banking_system.md  blog_api_backend.md  bmi_calculator.md  browser_automation.md  chat_app.md  chatgpt_cli.md  cli_shell.md  command_patterns.md  commit_helper.md  concurrency_based_data.md  config_file_parser.md  contact_manager.md  crud_api.md  crud_in_file.md  csv_file_processor.md  csv_to_json.md  custom_error_types.md  data_validation.md  day_001_hello_rust.md  dep_graph.md  directory_scanner.md  dockerfile_gen.md  ecommerce_backend.md  encrypted_notes.md  error_handling_demo.md  fibonacci_generator.md  file_compression_tool.md  file_encryption_tool.md  file_reader_cli.md  frontend_todo_list.md  game_of_life.md  generic_binary_search.md  generic_stack.md  guessing_game.md  hello_actix.md  hello_rust.md  hello_yew.md  (+61 more)
projects/admin_dashboard_ui/: Cargo.toml  index.html
projects/ascii_art/: Cargo.toml
projects/ascii_art/src/: main.rs
projects/banking_system/: Cargo.toml
projects/browser_automation/: Cargo.toml
projects/chat_app/: Cargo.toml  chat_history.json
projects/chatgpt_cli/: Cargo.toml
projects/cli_shell/: Cargo.toml
projects/commit_helper/: Cargo.toml
projects/config_file_parser/: config.txt
projects/crud_in_file/: Cargo.toml
projects/csv_file_processor/: data.csv
projects/csv_to_json/: Cargo.toml
projects/data_validation/: Cargo.toml
projects/dep_graph/: Cargo.toml
projects/dockerfile_gen/: Cargo.toml
projects/ecommerce_backend/: .env.example  Cargo.toml
projects/ecommerce_backend/src/: main.rs
projects/encrypted_notes/: Cargo.toml  notes.db
projects/file_compression_tool/: Cargo.toml
projects/file_encryption_tool/: Cargo.toml
projects/file_reader_cli/: sample.txt
projects/frontend_todo_list/: Cargo.toml  index.html
projects/frontend_todo_list/src/: main.rs
projects/generic_binary_stack/: Cargo.toml
projects/hello_actix/: Cargo.toml
projects/hello_yew/: Cargo.toml  index.html
projects/hello_yew/src/: lib.rs
projects/json_merge/: Cargo.toml
projects/json_parser/: Cargo.toml  sample.json
projects/jwt_authentication/: Cargo.toml
projects/key_value_store/: Cargo.toml
projects/logger_utility/: Cargo.toml  log.txt
projects/markdown_to_html_converter/: sample.html  sample.md
projects/memory_mgt_demo/: Cargo.toml
projects/minigrep/: poem.txt
projects/multi-_threaded_file_copier/: Cargo.toml
projects/multiclient_chat_server/: Cargo.toml
projects/mutex_arc_demo/: Cargo.toml
projects/plugin_system/: Cargo.toml
projects/postgresql_crud_app/: .env  .env.example  docker-compose.yml
projects/postgresql_full_todo/: .env.example  Cargo.toml
projects/postgresql_full_todo/src/: main.rs
projects/process_manager/: Cargo.toml
projects/progress_bar/: Cargo.toml
projects/prompt_manager/: Cargo.toml
projects/quiz_engine/: Cargo.toml  questions.csv
projects/realtime_file_watcher/: Cargo.toml
projects/soundboard/: Cargo.toml
projects/weather_dashboard/: Cargo.toml  config.toml  index.html
projects/weather_dashboard/src/: main.rs
projects/yew_chat_ui/: Cargo.toml  index.html
projects/yew_chat_ui/src/: lib.rs  main.rs
(+147 files in other folders)
