[package]
name = "ascii_art"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

Unboxed my invite to the Unchain Summer Conference by @NFT__NG and I’m genuinely excited about this one.  

If you’ve been trying to understand Web3 without the noise, this is a great room to be in. 

Expect practical conversations, honest stories from people actually building, and the kind of networking that turns into projects and paychecks. 

Details:
🗓 Thursday, Sept 4 2025
🕙 10:00 AM
📍 D’Podium, Ikeja (Lagos) 

🎟️ Get your ticket here: http://tix.africa/unchainsummer 

If you can make it, I highly recommend you do. 

Let’s learn, build, and connect.

#Web3foreveryone #UnchainSummer25