[package]
name = "frontend_todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }  
wasm-bindgen = "0.2"
gloo-net = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] } 
wasm-bindgen-futures = "0.4"  