[package]
name = "hello_yew"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
 
[lib]
crate-type = ["cdylib", "rlib"]
 
[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Element", "HtmlElement", "console"] 