[package]
name = "weather_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.4"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.100"  

[dev-dependencies]
trunk = "0.21.0"  